--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
