--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
