--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc -p tsconfig.json"
+    "start": "ts-node src/index.ts"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "config": "^4.1.1",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "nodemon": "^3.1.10"
   }
 }
