--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "nodemon src/index.ts"
     
   },
   "keywords": [],
