--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.ts"
-    
+    "dev": "nodemon --watch src --ext ts --exec node --loader ts-node/esm src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +12,13 @@
   "description": "",
   "dependencies": {
     "config": "^4.1.1",
-    "express": "^5.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "nodemon": "^3.1.10"
+    "@types/node": "^24.3.3",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
