--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec node --loader ts-node/esm src/index.ts"
+    "dev": "nodemon --exec ts-node-esm src/index.ts"
   },
   "keywords": [],
   "author": "",
