--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "config": "^4.1.1",
     "cors": "^2.8.5",
@@ -21,5 +20,6 @@
     "@types/node": "^24.3.3",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.5"
-  }
+  },
+  "description": ""
 }
