--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "commonjs",
+  "private": true,
+  "workspaces": ["packages/*", "backend", "frontend"],
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
@@ -13,7 +15,9 @@
   "dependencies": {
     "config": "^4.1.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@baseline-buddy/core-analyzer": "file:../packages/core-analyzer"
+
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
