--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "private": true,
+  "workspaces": ["packages/*", "backend", "frontend"],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
