--- a/packages/core-analyzer/package.json
+++ b/packages/core-analyzer/package.json
@@ -1,7 +1,66 @@
 {
-    "name": "@baseline-buddy/core-analyzer",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT"
+  "name": "baseline-buddy",
+  "displayName": "Baseline Buddy",
+  "description": "Surface Baseline readiness inside VS Code: diagnostics for modern web features with quick links to MDN.",
+  "version": "0.0.1",
+  "publisher": "your-publisher-id",
+  "license": "MIT",
+  "icon": "icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/baseline-buddy"
+  },
+  "engines": {
+    "vscode": "^1.90.0"
+  },
+  "categories": [
+    "Linters",
+    "Other"
+  ],
+  "keywords": [
+    "Baseline",
+    "MDN",
+    "web features",
+    "linters",
+    "compatibility"
+  ],
+  "main": "./src/extension.js",
+  "activationEvents": [
+    "onLanguage:html",
+    "onLanguage:css",
+    "onLanguage:javascript"
+  ],
+  "contributes": {
+    "commands": [
+      {
+        "command": "baselineBuddy.openDocs",
+        "title": "Baseline Buddy: Open MDN"
+      }
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Baseline Buddy",
+      "properties": {
+        "baselineBuddy.severity": {
+          "type": "string",
+          "enum": ["warning", "info", "error"],
+          "default": "warning",
+          "description": "Default severity for non-Baseline features."
+        }
+      }
+    }
+  },
+  "scripts": {
+    "postinstall": "node -e \"console.log('Ready to Run: press F5 in VS Code (Run Extension).')\"",
+    "package": "vsce package",
+    "publish": "vsce publish"
+  },
+  "dependencies": {
+    "@baseline-buddy/core-analyzer": "file:../core-analyzer"
+  },
+  "devDependencies": {
+    "vsce": "^3.0.0"
   }
+}
+
   
