--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "postinstall": "node -e \"console.log('Ready: press F5 (Run Extension) in VS Code.')\""
   },
-  "dependencies": {}
+  "dependencies": {
+    "@baseline-buddy/core-analyzer": "file:../core-analyzer"
+  }
 }
 
   
